--- a/index.html
+++ b/index.html
@@ -96,6 +96,14 @@
           <span>Reborn XP</span>
           <button onclick="goto(`https://xp.quenq.com`)"> Run </button>
       </div>
+      <div class="card">
+      <div class="card-border-top"></div>
+          <div class="img">
+          <img src="https://raw.githubusercontent.com/HyggshiOSDeveloper/hyggshi-os-website/refs/heads/main/Resources/favicon.ico">
+          </div>
+          <span>Hyggshi OS Web Edition</span>
+          <button onclick="goto(`https://hyggshiosdeveloper.github.io/hyggshi-os-website/OSmain.html`)"> Run </button>
+      </div>
 
 
 
